Changed base colors for testing plone.themepreview

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -20,8 +20,8 @@
 
 body {
     font: 100% Arial, FreeSans, sans-serif;
-    background: White;
-    color: Black;
+    background: #87EDAE;
+    color: #213027;
     /* width: 58em; margin: 1em auto; */
 }
 
