--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -20,8 +20,8 @@
 
 body {
     font: 100% Arial, FreeSans, sans-serif;
-    background: #87EDAE;
-    color: #213027;
+    background: #E1A5F0;
+    color: #52215E;
     /* width: 58em; margin: 1em auto; */
 }
 
